--- a/package.json
+++ b/package.json
@@ -1,6 +1,5 @@
 {
- "homepage": "https://isarebollo.github.io/Portafolio",
- "name": "portafolio",
+  "name": "portafolio",
  "version": "0.1.0",
  "private": true,
  "dependencies": {
@@ -21,9 +20,7 @@
   "start": "react-scripts start",
   "build": "react-scripts build",
   "test": "react-scripts test",
-  "eject": "react-scripts eject",
-  "predeploy": "npm run build",
-  "deploy": "gh-pages -d build"
+  "eject": "react-scripts eject"
  },
  "eslintConfig": {
   "extends": [
